--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,24 @@ body
     margin: 0;
     padding: 0;
 }
+
+#cabecera
+{
+    background: #33A;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+
+#cabecera #tagline
+{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
 #container
 {
     width: 70%;
@@ -19,4 +37,21 @@ body
 #container h1
 {
     font-size: 30px;
+    text-align: center;
+}
+
+.t-comanda thead td{
+    border: none;
+    text-align: left;
+    width: 50%;
+    padding: 10px 0;
+    margin: 1em;
+}
+
+tr:nth-child(odd) {
+    background-color: #f2f2f2;
+}
+
+tr:nth-child(even) {
+    background-color: #fbfbfb;
 }
