--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,17 @@ body
     font-size: 30px;
     text-align: center;
 }
+#post
+{
+    padding: 1em;
+}
+
+#footer
+{
+    background: #777;
+    color: white;
+    text-align: center;
+}
 
 .t-comanda thead td{
     border: none;
